app/base/bank-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
  namespace: bankapp
  labels:
    app: bankapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: madhupdevops/bankapp:v5
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
