app/base/bank-app/mysqlService.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: bankapp
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
