app/base/bank-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp
  labels:
    app: bankapp
spec:
  type: NodePort
  selector:
    app: bankapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080 # Exposes the app on this port of the host
